--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
@@ -31,9 +31,7 @@
           <ActivityPubTagChooser
             @tagId={{this.tag}}
             @onChange={{action "changeTag"}}
-            @options={{hash
-              hasActor=false
-            }}
+            @options={{hash hasActor=false}}
           />
         {{/if}}
       </div>
