--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -229,50 +229,43 @@ section.activity-pub-actor-setting {
 body.user-preferences-activity-pub-page {
   .form-vertical {
     width: 100%;
+
+    .control-group {
+      margin-bottom: 1em;
+    }
+
+    .activity-pub-authorizations {
+      margin-bottom: 2em;
+    }
   }
 }
 
 .activity-pub-authorize {
   .controls {
-    > *:not(label) {
-      display: inline-flex;
-      vertical-align: middle;
-      margin-right: .25em;
-    }
+    display: inline-flex;
+    gap: 0.5em;
   }
 
   input {
-    min-width: 250px;
+    min-width: 300px;
   }
+}
+
+.activity-pub-authorize-auth-type {
+  min-width: 150px;
 }
 
 .activity-pub-authorize-verified-domain {
-  display: inline-flex;
+  min-width: 300px;
+  background: var(--primary-low);
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  justify-content: space-between;
+  box-sizing: border-box;
 
-  a {
-    cursor: unset;
-  }
-
-  button {
-    display: inline-block;
-  }
-}
-
-.activity-pub-authorizations {
-  margin-top: 1em;
-
-  ul {
-    list-style: none;
-    margin: 0;
-
-    li {
-      margin: 1em 0;
-    }
-  }
-
-  .activity-pub-authorization {
-    display: inline-flex;
-    align-items: center;
+  span {
+    padding: 0 0.75em;
   }
 }
 
