Clarify username format in description and warning

--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
@@ -68,6 +68,8 @@
           <div class="activity-pub-actor-setting-description">
             <span>{{i18n
                 "admin.discourse_activity_pub.actor.username_description"
+                min_length=this.siteSettings.min_username_length
+                max_length=this.siteSettings.max_username_length
               }}</span>
           </div>
         </section>
