trigger verifyDomain on Enter in authorize domain input

--- a/assets/javascripts/discourse/components/activity-pub-authorize.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-authorize.hbs
@@ -28,6 +28,7 @@
         disabled={{this.verifyingDomain}}
         placeholder={{this.placeholder}}
         id="user_activity_pub_authorize_domain"
+        {{on "keydown" this.onDomainKeyDown}}
       />
     {{/if}}
     <DButton
