FIX: Adding tags in admin UI (#116)
This was broken after an upgrade in core that refactored the TagDrop
component. This PR switches to using the TagChooser component, since it
requires no overrides.

--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
@@ -28,10 +28,11 @@
           />
         {{/if}}
         {{#if (eq this.actor.model_type "tag")}}
-          <ActivityPubTagChooser
-            @tagId={{this.tag}}
+          <TagChooser
+            @tags={{this.tags}}
             @onChange={{action "changeTag"}}
-            @options={{hash hasActor=false}}
+            @blockedTags={{this.blockedTagActorNames}}
+            @options={{hash allowAny=false maximum=1}}
           />
         {{/if}}
       </div>
