--- a/assets/javascripts/discourse/components/activity-pub-nav-item.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-nav-item.hbs
@@ -1,17 +1,12 @@
-{{#if @model}}
-  <a
-    class={{this.classes}}
-    href={{this.href}}
-    title={{i18n
-      "discourse_activity_pub.discovery.description"
-      model_name=@model.name
-    }}
-    {{did-insert this.subscribe}}
-    {{did-insert this.didChangeModel}}
-    {{did-update this.didChangeModel @model}}
-    {{will-destroy this.unsubscribe}}
-  >
-    {{d-icon "discourse-activity-pub"}}
-    {{i18n "discourse_activity_pub.discovery.label"}}
-  </a>
-{{/if}}
+<a
+  class={{this.classes}}
+  href={{this.href}}
+  title={{this.title}}
+  {{did-insert this.setup}}
+  {{did-update this.changeCategory @category}}
+  {{did-update this.changeTag @tag}}
+  {{will-destroy this.teardown}}
+>
+  {{d-icon "discourse-activity-pub"}}
+  {{i18n "discourse_activity_pub.discovery.label"}}
+</a>
