--- a/assets/javascripts/discourse/connectors/extra-nav-item/activity-pub-navigation.hbs
+++ b/assets/javascripts/discourse/connectors/extra-nav-item/activity-pub-navigation.hbs
@@ -1,1 +1,1 @@
-<ActivityPubNavItem @model={{this.model}} @modelType={{this.modelType}} />
+<ActivityPubNavItem @category={{this.category}} @tag={{this.tag}} />
