Rationalise naming and classes for followers route

--- a/assets/javascripts/discourse/components/modal/activity-pub-actor-reject.hbs
+++ b/assets/javascripts/discourse/components/modal/activity-pub-actor-reject.hbs
@@ -8,7 +8,7 @@
       {{i18n
         "discourse_activity_pub.actor_reject.confirm"
         actor=@model.actor.name
-        followed_actor=@model.followingActor.handle
+        follower=@model.follower.handle
       }}
     </div>
   </:body>
