--- a/assets/javascripts/discourse/templates/activity-pub-actor-followers.hbs
+++ b/assets/javascripts/discourse/templates/activity-pub-actor-followers.hbs
@@ -65,7 +65,7 @@
               >
                 <ActivityPubFollowBtn
                   @actor={{actor}}
-                  @followingActor={{follower}}
+                  @follower={{follower}}
                   @reject={{route-action "reject"}}
                   @type="actor_reject"
                 />
