DEV: Update eslint config

--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
@@ -182,7 +182,7 @@
         @action={{action "saveActor"}}
         @label="admin.discourse_activity_pub.actor.save.label"
         @title="admin.discourse_activity_pub.actor.save.title"
-        @class="activity-pub-save-actor btn-primary"
+        class="activity-pub-save-actor btn-primary"
         @disabled={{not this.canSave}}
       />
     {{/if}}
