--- a/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
+++ b/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
@@ -1,4 +1,4 @@
-<DSection @pageClass="user-preferences-activity-pub" />
+{{body-class "user-preferences-activity-pub-page"}}
 
 <ActivityPubAuthorize />
 
