--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor.hbs
@@ -23,7 +23,7 @@
           @automatic={{true}}
           @order={{this.order}}
           @asc={{this.asc}}
-          @class="activity-pub-actor-table-model"
+          class="activity-pub-actor-table-model"
         />
         <div
           class="activity-pub-actor-table-actions directory-table__column-header"
