--- a/assets/javascripts/discourse/components/activity-pub-follow-domain.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-follow-domain.hbs
@@ -16,7 +16,7 @@
       id="activity_pub_follow_domain_button"
     />
   </div>
-  <div class={{footerClass}}>
+  <div class={{this.footerClass}}>
     {{#if this.error}}
       {{this.error}}
     {{else if this.verifying}}
