--- a/assets/javascripts/discourse/components/modal/activity-pub-actor-follow.hbs
+++ b/assets/javascripts/discourse/components/modal/activity-pub-actor-follow.hbs
@@ -22,7 +22,7 @@
             id="activity_pub_actor_follow_find_button"
           />
         </div>
-        <div class={{footerClass}}>
+        <div class={{this.footerClass}}>
           {{#if this.error}}
             {{this.error}}
           {{else if this.validating}}
