--- a/assets/javascripts/discourse/templates/activity-pub-actor-followers.hbs
+++ b/assets/javascripts/discourse/templates/activity-pub-actor-followers.hbs
@@ -64,7 +64,7 @@
                 class="directory-table__cell activity-pub-follow-table-actions"
               >
                 <ActivityPubFollowBtn
-                  @actor={{actor}}
+                  @actor={{this.actor}}
                   @follower={{follower}}
                   @reject={{route-action "reject"}}
                   @type="actor_reject"
