--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
@@ -1,6 +1,6 @@
 <div class={{this.containerClass}}>
   <div class="admin-title activity-pub-actor-title">
-    <h2>{{titleLabel}}</h2>
+    <h2>{{this.titleLabel}}</h2>
   </div>
 
   <div class="activity-pub-actor-header">
