--- a/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
+++ b/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
@@ -2,14 +2,14 @@
 
 <ActivityPubAuthorize />
 
-{{#if hasAuthorizations}}
+{{#if this.hasAuthorizations}}
   <div class="activity-pub-authorizations">
     <h4>{{i18n "user.discourse_activity_pub.authorizations.title"}}</h4>
     <label>{{i18n
         "user.discourse_activity_pub.authorizations.description"
       }}</label>
     <ul>
-      {{#each authorizations as |authorization|}}
+      {{#each this.authorizations as |authorization|}}
         <li>
           <ActivityPubAuthorization
             @authorization={{authorization}}
