DEV: Update deprecated Font Awesome icon names

--- a/assets/javascripts/discourse/components/activity-pub-authorization.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-authorization.hbs
@@ -5,7 +5,7 @@
     target="_blank"
     rel="noopener noreferrer"
   >
-    {{d-icon "external-link-alt"}}
+    {{d-icon "up-right-from-square"}}
     {{@authorization.actor_id}}
   </a>
   <DButton
