--- a/assets/javascripts/discourse/components/modal/activity-pub-post-info.hbs
+++ b/assets/javascripts/discourse/components/modal/activity-pub-post-info.hbs
@@ -20,7 +20,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            {{d-icon "external-link-alt"}}
+            {{d-icon "up-right-from-square"}}
             {{this.urlText}}
           </a>
         </span>
