--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
@@ -173,7 +173,7 @@
             {{d-icon "check"}}
             {{i18n "admin.discourse_activity_pub.actor.save.success"}}
           {{else}}
-            {{d-icon "times"}}
+            {{d-icon "xmark"}}
             {{i18n "admin.discourse_activity_pub.actor.save.failed"}}
           {{/if}}
         </span>
