DEV: Update more deprecated Font Awesome icon names

--- a/assets/javascripts/discourse/components/activity-pub-authorize.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-authorize.hbs
@@ -8,7 +8,7 @@
       <span class="activity-pub-authorize-verified-domain">
         <a class="btn">{{this.domain}}</a>
         <DButton
-          @icon="times"
+          @icon="xmark"
           @action={{action "clearDomain"}}
           @title="user.discourse_activity_pub.clear_domain_button.title"
           id="user_activity_pub_authorize_clear_domain"
