--- a/assets/javascripts/discourse/components/activity-pub-follow-domain.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-follow-domain.hbs
@@ -8,7 +8,7 @@
       id="activity_pub_follow_domain_input"
     />
     <DButton
-      @icon="external-link-alt"
+      @icon="up-right-from-square"
       @action={{action "follow"}}
       @label="discourse_activity_pub.follow.domain.btn_label"
       @title="discourse_activity_pub.follow.domain.btn_title"
