--- a/assets/javascripts/discourse/components/modal/activity-pub-actor-follow.hbs
+++ b/assets/javascripts/discourse/components/modal/activity-pub-actor-follow.hbs
@@ -14,7 +14,7 @@
             {{on "keyup" this.onKeyup}}
           />
           <DButton
-            @icon="search"
+            @icon="magnifying-glass"
             @action={{action "find"}}
             @label="discourse_activity_pub.actor_follow.find.btn_label"
             @title="discourse_activity_pub.actor_follow.find.btn_title"
