--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor.hbs
@@ -47,7 +47,7 @@
                 @action={{action "editActor" actor}}
                 @label="admin.discourse_activity_pub.actor.edit.label"
                 @title="admin.discourse_activity_pub.actor.edit.title"
-                @icon="pencil-alt"
+                @icon="pencil"
                 class="activity-pub-actor-edit-btn"
               />
             </div>
