--- a/assets/javascripts/discourse/components/activity-pub-authorization.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-authorization.hbs
@@ -9,7 +9,7 @@
     {{@authorization.actor_id}}
   </a>
   <DButton
-    @icon="times"
+    @icon="xmark"
     @action={{action "remove"}}
     @title="user.discourse_activity_pub.remove_authorization_button.title"
     id="user_activity_pub_authorize_remove_authorization"
